--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "gsap": "^3.9.1",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
