--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "export": "next build && next export"
   },
   "dependencies": {
-    "gsap": "^3.9.1",
+    "gsap": "3.11.5",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
