--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
   },
   "dependencies": {
     "gsap": "3.11.5",
-    "next": "^14.1.0",
+    "next": "15.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.6",
+    "@tailwindcss/postcss": "^4.1.6",
     "autoprefixer": "^10.4.2",
     "eslint": "8.9.0",
-    "eslint-config-next": "^14.1.0",
-    "postcss": "^8.4.7",
-    "tailwindcss": "^3.0.23"
+    "eslint-config-next": "^14.1.0"
   }
 }
